syntax = "proto3";

package protobuf;

option go_package = "/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message Auction {
    string id = 1;
    string title = 2;
    string description = 3;
    int64 organizerID = 4;
    int32 max_participants = 5;
    int32 participants_number = 6;
    google.protobuf.Timestamp starts_at = 7;
    google.protobuf.Timestamp ends_at = 8;   
    string Status = 9;
};

message Product{
    string id = 1;
    string auction_id = 2;
    string title = 3;
    string description = 4;
    int64 start_price = 5;
    string category = 6;
    map<string, google.protobuf.Any> params = 7;
};

message Response {
    string message = 1;
    string error = 2;
    int64 error_code = 3;
};


message CreateAuctionRequest{
    Auction auction = 1;
};

message UpdateAuctionRequest {
    Auction auction = 1;
};

message CancelAuctionRequest {
    string id = 1;
};

message AddParticipantRequest {
    string auction_id = 1;
    string participant_id = 2;
};

message DeleteParticipantRequest {
    string auction_id = 1;
    string participant_id = 2;
};

message AddProductRequest {
    string auction_id = 1;
    Product product = 2;
};

message UpdateProductRequest {
    string auction_id = 1;
    Product product = 2;
};

message DeletePoductRequest {
    string auction_id = 1;
    string product_id = 2;
};


service AuctionsService{
    rpc CreateAuction (CreateAuctionRequest) returns (google.protobuf.Empty) {};
    rpc UpdateAuction (UpdateAuctionRequest) returns (google.protobuf.Empty) {};
    rpc CancelAuction (CancelAuctionRequest) returns (google.protobuf.Empty) {};
    rpc AddParticipant (AddParticipantRequest) returns (google.protobuf.Empty) {};
    rpc DeleteParticipant (DeleteParticipantRequest) returns (google.protobuf.Empty) {};
    rpc AddProduct (AddProductRequest) returns (google.protobuf.Empty) {};
    rpc UpdateProduct (UpdateProductRequest) returns (google.protobuf.Empty) {};
    rpc DeleteProduct (DeletePoductRequest) returns (google.protobuf.Empty) {};
};